--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Ronin Multi</title>
+        <title>Sabyasachi Kamila</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -37,13 +37,13 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-								<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
+								<li class="nav-item"><a class="nav-link" href="about-us.html">About Me</a></li> 
+								<li class="nav-item"><a class="nav-link" href="services.html">Education</a>
 								<li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
+									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Publication</a>
 									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-										<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Project Details</a></li>
+										<li class="nav-item"><a class="nav-link" href="portfolio.html">Conferences</a></li>
+										<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Journals</a></li>
 										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 									</ul>
 								</li> 
@@ -76,7 +76,7 @@
 						<div class="col-lg-6">
 							<div class="banner_content">
 								<h5>This is me</h5>
-								<h2>Travor James</h2>
+								<h2>Sabyasachi Kamila</h2>
 								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 								<a class="banner_btn" href="#">Discover Now</a>
 							</div>
@@ -94,7 +94,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>I am a PhD scholar at IIT Patna,India.</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
