--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="banner_content">
 								<h5>This is me</h5>
 								<h2>Sabyasachi Kamila</h2>
-								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+								<p>In is the only way out</p>
 								<a class="banner_btn" href="#">Discover Now</a>
 							</div>
 						</div>
